2014-06-09  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/microblaze/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/microblaze/nptl/createthread.c: File removed.

2014-06-09  Roland McGrath  <roland@hack.frob.com>

	* nptl/sysdeps/sh/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* nptl/sysdeps/unix/sysv/linux/sh/createthread.c: File removed.

2014-06-09  Roland McGrath  <roland@hack.frob.com>

	* sysdeps/m68k/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/m68k/nptl/createthread.c: File removed.

	* sysdeps/hppa/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/hppa/nptl/createthread.c: File removed.

	* sysdeps/mips/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/mips/nptl/createthread.c: File removed.

	* sysdeps/arm/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/arm/createthread.c: File removed.

	* nptl/sysdeps/pthread/createthread.c (TLS_DEFINE_INIT_TP): New macro,
	if not already defined.
	(do_clone): Use that in place of PREPARE_CREATE and TLS_VALUE.
	* nptl/sysdeps/x86_64/tls.h (TLS_DEFINE_INIT_TP): New macro.
	* nptl/sysdeps/i386/tls.h (tls_fill_user_desc): New function.
	(TLS_INIT_TP): Use it.
	(TLS_DEFINE_INIT_TP): New macro.
	* sysdeps/unix/sysv/linux/i386/createthread.c: File removed.

2014-06-09  Joseph Myers  <joseph@codesourcery.com>

	* conform/data/termios.h-data [POSIX] (IUCLC): Do not expect
	constant.
	[POSIX] (IXANY): Likewise.
	[POSIX] (OLCUC): Likewise.
	[POSIX || POSIX2008] (CBAUD): Do not allow.
	[POSIX || POSIX2008] (DEFECHO): Likewise.
	[POSIX || POSIX2008] (ECHOCTL): Likewise.
	[POSIX || POSIX2008] (ECHOKE): Likewise.
	[POSIX || POSIX2008] (ECHOPRT): Likewise.
	[POSIX || POSIX2008] (EXTA): Likewise.
	[POSIX || POSIX2008] (EXTB): Likewise.
	[POSIX || POSIX2008] (FLUSHO): Likewise.
	[POSIX || POSIX2008] (LOBLK): Likewise.
	[POSIX || POSIX2008] (PENDIN): Likewise.
	[POSIX || POSIX2008] (SWTCH): Likewise.