@@ -1,5 +1,12 @@
 2014-06-09  Roland McGrath  <roland@hack.frob.com>
 
+	* nptl/sysdeps/pthread/createthread.c: Include <arch-fork.h>.
+	* sysdeps/unix/sysv/linux/ia64/arch-fork.h (ARCH_CLONE): New macro.
+	* sysdeps/ia64/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
+	* sysdeps/unix/sysv/linux/ia64/nptl/createthread.c: File removed.
+
+2014-06-09  Roland McGrath  <roland@hack.frob.com>
+
 	* sysdeps/microblaze/nptl/tls.h (TLS_DEFINE_INIT_TP): New macro.
 	* sysdeps/unix/sysv/linux/microblaze/nptl/createthread.c: File removed.
 
